# CSCI-10-Notes-Scraper

./: Cargo.toml  csci_10_note_modules.json  response.json
src/: canvas.rs  main.rs  prompt.rs
