[package]
name = "csci-10-notes-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
